--- a/WebSPA/src/app/orders/orders.component.html
+++ b/WebSPA/src/app/orders/orders.component.html
@@ -6,13 +6,16 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
+        <a class="nav-link" href="orders/addOrder">Create Order</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="orders/addCustomer">Create Customer</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="orders/addProduct">Create Product</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="contacts">Contact Book</a>
+        <a class="nav-link" href="contacts">Contact Details</a>
       </li>
     </ul>
   </div>
