frontend Order Mgt

--- a/WebSPA/src/app/orders/create-customer/create-customer.component.html
+++ b/WebSPA/src/app/orders/create-customer/create-customer.component.html
@@ -61,7 +61,7 @@
         </div>
       </div>
 
-      <div class="row-sm">Address:</div>
+      <div class="row-sm">Billing Address:</div>
       <div class="form-group">
         <label class="col-form-label col-form-label-sm">Street</label>
         <input type="text" class="form-control  form-control-sm" id="street" name="street" [(ngModel)]="street" placeholder="1234 Main St.">
