--- a/WebSPA/src/app/orders/create-order/create-order.component.html
+++ b/WebSPA/src/app/orders/create-order/create-order.component.html
@@ -5,20 +5,29 @@
   </div>
   <hr>
   <div>
-    <form #contactForm="ngForm" (ngSubmit)="onAddButtonClick(contactForm)">
+    <form #orderForm="ngForm" (ngSubmit)="onAddButtonClick(orderForm)">
       <div>
         <div class="form-group">
+          <p>To create a new order, select an exisiting customer or create a new one.</p>
           <div class="col-sm">Customer :</div>
-          <div class="col-sm">
-            <tag-input class="form-control-sm" [onlyFromAutocomplete]="true" (onAdd)="onItemAdded()" (onRemove)="onItemRemoved()" [(ngModel)]="searchTag" id="searchTag" theme='dark' name="searchTag" [secondaryPlaceholder]="'Search in Customers'" [maxItems]='1'>
-              <tag-input-dropdown [autocompleteItems]=names>
-              </tag-input-dropdown>
-            </tag-input>
+          <div class="form-group row">
+            <div class="col-sm-8">
+              <tag-input class="form-control-sm" [onlyFromAutocomplete]="true" (onAdd)="onItemAdded()" (onRemove)="onItemRemoved()" [(ngModel)]="searchTag" id="searchTag" theme='dark' name="searchTag" [secondaryPlaceholder]="'Search in Customers'" [maxItems]='1'>
+                <tag-input-dropdown [autocompleteItems]=names>
+                </tag-input-dropdown>
+              </tag-input>
+            </div>
+            <div class="col-sm-1">
+              <p>or</p>
+            </div>
+            <div class="col-sm-3">
+              <button type="button" class="form-control  form-control-sm btn-sm btn-primary" (click)="onCreateCustomer()">Create New Customer</button>
+            </div>
           </div>
         </div>
 
         <div class="col" *ngIf="customer">
-          <div class="row-sm">Personal Details:</div>
+          <div class="row-sm">Personal Details :</div>
           <div class="form-group row">
             <div class="col">
               <label class="col-form-label col-form-label-sm">First Name</label>
@@ -29,40 +38,36 @@
               <input type="text" class="form-control form-control-sm" id="lastName" name="lastName" [(ngModel)]="lastName" placeholder="Last name" readonly>
             </div>
           </div>
+          <!--<fieldset class="form-group">
+      <div class="row">
+        <legend class="col-form-label col-form-label-sm col-sm-2 pt-0">Gender</legend>
+        <div class="col-sm-10">
+          <div class="form-check form-check-inline">
+            <input class="form-check-input form-control-sm" type="radio" name="gender" [(ngModel)]="gender" id="genderM" value="Male" readonly>
+            <label class="form-check-label col-form-label-sm" for="genderM">
+              Male
+            </label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input form-control-sm" type="radio" name="gender" [(ngModel)]="gender" id="genderF" value="Female" readonly>
+            <label class="form-check-label col-form-label-sm" for="gendeFM">
+              Female
+            </label>
+          </div>
+        </div>
+      </div>
+    </fieldset>-->
 
-          <fieldset class="form-group">
-            <div class="row">
-              <legend class="col-form-label col-form-label-sm col-sm-2 pt-0">Gender</legend>
-              <div class="col-sm-10">
-                <div class="form-check form-check-inline">
-                  <input class="form-check-input form-control-sm" type="radio" name="gender" [(ngModel)]="gender" id="genderM" value="Male" readonly>
-                  <label class="form-check-label col-form-label-sm" for="genderM">
-                    Male
-                  </label>
-                </div>
-                <div class="form-check form-check-inline">
-                  <input class="form-check-input form-control-sm" type="radio" name="gender" [(ngModel)]="gender" id="genderF" value="Female" readonly>
-                  <label class="form-check-label col-form-label-sm" for="gendeFM">
-                    Female
-                  </label>
-                </div>
-              </div>
-            </div>
-          </fieldset>
-
-          <div class="row-sm">Contact Details:</div>
+          <div class="row-sm">Contact Details :</div>
           <div class="form-group row">
             <div class="col">
               <label class="col-form-label col-form-label-sm">Email</label>
               <input type="email" class="form-control form-control-sm" id="email" name="email" [(ngModel)]="email" placeholder="name@example.com" readonly>
             </div>
-            <div class="col">
+            <!--<div class="col">
               <label class="col-form-label col-form-label-sm">Facebook Id</label>
               <input type="text" class="form-control form-control-sm" id="facebookId" name="facebookId" [(ngModel)]="facebookId" placeholder="Facebook Id" readonly>
-            </div>
-          </div>
-
-          <div class="form-group row">
+            </div>-->
             <div class="col">
               <label class="col-form-label col-form-label-sm">Mobile Phone</label>
               <input type="text" class="form-control form-control-sm" id="mobilePhone" name="mobilePhone" [(ngModel)]="mobilePhone" placeholder="xxxxxxxxxx" readonly>
@@ -73,7 +78,7 @@
             </div>
           </div>
 
-          <div class="row-sm">Billing Address Details:</div>
+          <div class="row-sm">Billing Address Details :</div>
           <div class="form-row" *ngFor="let address of addresses">
             <div class="form-group col-md-4">
               <label class="col-form-label col-form-label-sm">Street</label>
@@ -93,84 +98,90 @@
             </div>
           </div>
         </div>
-      </div>
-      <hr />
-      <div>
-        <div class="col-sm">Add Order Items :</div>
-        <div class="form-group col">
-          <div class="form-row">
-            <div class="form-group col-md-2">
-              <label class="col-form-label col-form-label-sm">Product</label>
-              <select id="productN" class="form-control form-control-sm" name="productN" [(ngModel)]="productN" (ngModelChange)="onProductSelected()">
-                <option selected>Choose Product...</option>
-                <option *ngFor="let productName of productNames">{{ productName }}</option>
-              </select>
-            </div>
-            <div class="form-group col-md-2">
-              <label class="col-form-label col-form-label-sm">Product Category</label>
-              <input type="text" class="form-control form-control-sm" id="productCategory" name="productCategory" [(ngModel)]="productCategory" placeholder="Product Category" readonly>
-            </div>
-            <div class="form-group col-md-2">
-              <label class="col-form-label col-form-label-sm">Description</label>
-              <input type="text" class="form-control form-control-sm" id="description" name="description" [(ngModel)]="description" placeholder="Description" readonly>
-            </div>
-            <div class="form-group col-md-2">
-              <label class="col-form-label col-form-label-sm">Unit Price</label>
-              <input type="text" class="form-control form-control-sm" id="unitPrice" name="unitPrice" [(ngModel)]="unitPrice" placeholder="Unit Price" readonly>
-            </div>
-            <div class="form-group col-md-2">
-              <label class="col-form-label col-form-label-sm">Availability</label>
-              <input type="text" class="form-control form-control-sm" id="availability" name="availability" [(ngModel)]="availability" placeholder="Availability" readonly>
-            </div>
-            <div class="form-group col-md-1">
-              <label class="col-form-label col-form-label-sm">Quantity</label>
-              <input type="text" class="form-control  form-control-sm" id="quantity" name="quantity" [(ngModel)]="quantity" placeholder="Quantity">
-            </div>
-            <div *ngIf="availability == 'In Stock' && customer && quantity > 0">
-              <label class="col-form-label col-form-label-sm"> `</label>
-              <button type="button" class="form-control  form-control-sm btn-sm btn-success" (click)="addOrderItems()">Add Items</button>
+        <hr />
+
+        <div>
+          <div class="col-sm">Add Order Items :</div>
+          <div class="form-group col">
+            <div class="form-row">
+              <div class="form-group col-md-2">
+                <label class="col-form-label col-form-label-sm">Product</label>
+                <select id="productN" class="form-control form-control-sm" name="productN" [(ngModel)]="productN" (ngModelChange)="onProductSelected()">
+                  <option selected>Choose Product...</option>
+                  <option *ngFor="let productName of productNames">{{ productName }}</option>
+                </select>
+              </div>
+              <div class="form-group col-md-2">
+                <label class="col-form-label col-form-label-sm">Product Category</label>
+                <input type="text" class="form-control form-control-sm" id="productCategory" name="productCategory" [(ngModel)]="productCategory" placeholder="Product Category" readonly>
+              </div>
+              <div class="form-group col-md-2">
+                <label class="col-form-label col-form-label-sm">Description</label>
+                <input type="text" class="form-control form-control-sm" id="description" name="description" [(ngModel)]="description" placeholder="Description" readonly>
+              </div>
+              <div class="form-group col-md-2">
+                <label class="col-form-label col-form-label-sm">Unit Price</label>
+                <input type="text" class="form-control form-control-sm" id="unitPrice" name="unitPrice" [(ngModel)]="unitPrice" placeholder="Unit Price" readonly>
+              </div>
+              <div class="form-group col-md-2">
+                <label class="col-form-label col-form-label-sm">Availability</label>
+                <input type="text" class="form-control form-control-sm" id="availability" name="availability" [(ngModel)]="availability" placeholder="Availability" readonly>
+              </div>
+              <div class="form-group col-md-1">
+                <label class="col-form-label col-form-label-sm">Quantity</label>
+                <input type="text" class="form-control  form-control-sm" id="quantity" name="quantity" [(ngModel)]="quantity" placeholder="Quantity">
+              </div>
+              <div *ngIf="availability == 'In Stock' && customer && quantity > 0">
+                <label class="col-form-label col-form-label-sm"> `</label>
+                <button type="button" class="form-control  form-control-sm btn-sm btn-success" (click)="addOrderItems()">Add Items</button>
+              </div>
             </div>
           </div>
         </div>
-      </div>     
-      <hr />
-      <div class="col-sm">Order Item Details :</div>
-      <div>
-        <mat-table [dataSource]="dataSource">
-          <ng-container matColumnDef="productName">
-            <mat-header-cell *matHeaderCellDef> Product Name </mat-header-cell>
-            <mat-cell *matCellDef="let orderItem"> {{ orderItem.productName }} </mat-cell>
-          </ng-container>
-          <ng-container matColumnDef="productCategory">
-            <mat-header-cell *matHeaderCellDef> Product Category </mat-header-cell>
-            <mat-cell *matCellDef="let orderItem"> {{ orderItem.productCategoryName }} </mat-cell>
-          </ng-container>
-          <ng-container matColumnDef="description">
-            <mat-header-cell *matHeaderCellDef> Description </mat-header-cell>
-            <mat-cell *matCellDef="let orderItem"> {{ orderItem.description }} </mat-cell>
-          </ng-container>
-          <ng-container matColumnDef="price">
-            <mat-header-cell *matHeaderCellDef> Unit Price </mat-header-cell>
-            <mat-cell *matCellDef="let orderItem"> {{ orderItem.price }} </mat-cell>
-          </ng-container>
-          <ng-container matColumnDef="quantity">
-            <mat-header-cell *matHeaderCellDef> Quantity </mat-header-cell>
-            <mat-cell *matCellDef="let orderItem"> {{ (orderItem.quantity != null ? orderItem.quantity : 0) }} </mat-cell>
-          </ng-container>
-          <ng-container matColumnDef="amount">
-            <mat-header-cell *matHeaderCellDef> Amount </mat-header-cell>
-            <mat-cell *matCellDef="let orderItem"> {{ (orderItem.price != null && orderItem.quantity != null ? orderItem.price * orderItem.quantity : 0)}} </mat-cell>
-          </ng-container>
-          <ng-container matColumnDef="delete">
-            <mat-header-cell *matHeaderCellDef>  </mat-header-cell>
-            <mat-cell *matCellDef="let orderItem"> <button type="button" class="form-control-sm btn-sm btn-danger" (click)="removeOrderItems(orderItem.orderItemId)">Remove Item</button> </mat-cell>
-          </ng-container>
-          <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-          <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-        </mat-table>
-      </div>
-      <hr />
-      <div>
+        <hr />
+
+        <div class="col-sm">Order Item Details :</div>
+        <div>
+          <mat-table [dataSource]="dataSource">
+            <ng-container matColumnDef="productName">
+              <mat-header-cell *matHeaderCellDef> Product Name </mat-header-cell>
+              <mat-cell *matCellDef="let orderItem"> {{ orderItem.productName }} </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="productCategory">
+              <mat-header-cell *matHeaderCellDef> Product Category </mat-header-cell>
+              <mat-cell *matCellDef="let orderItem"> {{ orderItem.productCategoryName }} </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="description">
+              <mat-header-cell *matHeaderCellDef> Description </mat-header-cell>
+              <mat-cell *matCellDef="let orderItem"> {{ orderItem.description }} </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="price">
+              <mat-header-cell *matHeaderCellDef> Unit Price </mat-header-cell>
+              <mat-cell *matCellDef="let orderItem"> {{ orderItem.price }} </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="quantity">
+              <mat-header-cell *matHeaderCellDef> Quantity </mat-header-cell>
+              <mat-cell *matCellDef="let orderItem"> {{ (orderItem.quantity != null ? orderItem.quantity : 0) }} </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="amount">
+              <mat-header-cell *matHeaderCellDef> Amount </mat-header-cell>
+              <mat-cell *matCellDef="let orderItem"> {{ (orderItem.price != null && orderItem.quantity != null ? orderItem.price * orderItem.quantity : 0)}} </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="delete">
+              <mat-header-cell *matHeaderCellDef>  </mat-header-cell>
+              <mat-cell *matCellDef="let orderItem"> <button type="button" class="form-control-sm btn-sm btn-danger" (click)="removeOrderItems(orderItem.orderItemId)">X</button> </mat-cell>
+            </ng-container>
+            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+          </mat-table>
+        </div>
+        <hr />
+        <div class="form-check">
+          <div class="col">
+            <input type="checkbox" class="form-check-input" id="isCompleted" name="isCompleted" [(ngModel)]="isCompleted">
+            <label class="form-check-label" for="isCompleted">Order is Completed.</label>
+          </div>                 
+        </div>
         <button *ngIf="orderItems.length > 0" type="submit" style="float: right" class="btn btn-primary btn-sm">Create Order</button>
       </div>
     </form>
