--- a/WebSPA/src/app/contacts/contact-details/contact-details.component.html
+++ b/WebSPA/src/app/contacts/contact-details/contact-details.component.html
@@ -1,17 +1,18 @@
 <div class="container-fluid"> 
-    <div class="page-header">
-      <br>
-      <h5>Contact Details</h5>        
-    </div>
-    <hr> 
-    <div class="container-fluid">
+  <div class="page-header">
+    <br>
+    <h5>Contact Details</h5>        
+  </div>
+  <hr> 
+  <div class="container-fluid">
+    <div class="col">
       <div class="form-group row">
         <div class="col">
-          <label class="col-form-label col-form-label-sm">First Name:</label>
+          <label class="col-form-label col-form-label-sm">First Name</label>
           <input type="text" class="form-control form-control-sm" id="firstName" name="firstName" [(ngModel)]="firstName" placeholder="First name" readonly>
         </div>
         <div class="col">
-          <label class="col-form-label col-form-label-sm">Last Name:</label>
+          <label class="col-form-label col-form-label-sm">Last Name</label>
           <input type="text" class="form-control form-control-sm" id="lastName" name="lastName" [(ngModel)]="lastName" placeholder="Last name" readonly>
         </div>
       </div>
@@ -31,7 +32,7 @@
               <label class="form-check-label col-form-label-sm" for="gendeFM">
                 Female
               </label>
-            </div>                
+            </div>
           </div>
         </div>
       </fieldset>
@@ -58,16 +59,17 @@
         </div>
       </div>
 
-      <div class="form-group">
-        <label class="col-form-label col-form-label-sm">Street</label>
-        <input type="text" class="form-control  form-control-sm" id="street" name="street" [(ngModel)]="street" placeholder="1234 Main St." readonly>
-      </div>
+
       <div class="form-row">
-        <div class="form-group col-md-6">
+        <div class="form-group col-md-4">
+          <label class="col-form-label col-form-label-sm">Street</label>
+          <input type="text" class="form-control  form-control-sm" id="street" name="street" [(ngModel)]="street" placeholder="1234 Main St." readonly>
+        </div>
+        <div class="form-group col-md-3">
           <label class="col-form-label col-form-label-sm">City</label>
           <input type="text" class="form-control  form-control-sm" id="city" name="city" [(ngModel)]="city" placeholder="City" readonly>
         </div>
-        <div class="form-group col-md-4">
+        <div class="form-group col-md-3">
           <label class="col-form-label col-form-label-sm">Province</label>
           <input type="text" class="form-control  form-control-sm" id="province" name="province" [(ngModel)]="province" placeholder="Province" readonly>
         </div>
@@ -76,15 +78,12 @@
           <input type="text" class="form-control  form-control-sm" id="zipcode" name="zipcode" [(ngModel)]="zipCode" placeholder="Zip" readonly>
         </div>
       </div>
-
-      <div style="float: right">
-        <button type="submit" class="btn btn-info btn-sm" (click)="editDetails(customerId)">Edit Contact</button>
-        &nbsp;
-        <button type="button" class="btn btn-danger btn-sm" (click)="deleteContact(customerId)">Delete Contact</button>
-      </div>
-      
+    </div>
+    <div style="float: right">
+      <button type="submit" class="btn btn-info btn-sm" (click)="editDetails(customerId)">Edit Contact</button>
+      &nbsp;
+      <button type="button" class="btn btn-danger btn-sm" (click)="deleteContact(customerId)">Delete Contact</button>
     </div>
   </div>
-  
-  
+</div>  
   
